--- a/open-data.html
+++ b/open-data.html
@@ -151,7 +151,7 @@
 <li>Support ways to measure and reward data reuse.</li>
 </ul>
 <h1 id="further-reading">Further reading</h1>
-<p>More relevant references for this topic can be found at the <a href="https://www.mendeley.com/groups/9199581/open-data-challenges/papers/">Open Data Challenges</a> group on Mendeley.</p>
+<p>More relevant references for this topic can be found at the <a href="https://www.mendeley.com/groups/9199581/open-data-challenges/papers/">Open Data Challenges</a> group on Mendeley. The bibliography and source files for this short paper can be found on the <a href="https://github.com/IanMulvany/open-data-challenges/tree/gh-pages">Open Data Challenges</a> repository on github.</p>
 <hr />
 <div id="refs" class="references">
 <div id="ref-galaxy2016">
